--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 </head>
 <body>
     <div class="template-selector">
-        <h2>Zintlr-Inspired Email Templates</h2>
+        <h2>Zintlr-Email Templates</h2>
         <div class="template-nav">
             <button class="nav-btn active" onclick="showTemplate(1)">Product Launch</button>
             <button class="nav-btn" onclick="showTemplate(2)">Feature Update</button>
