--- a/index.html
+++ b/index.html
@@ -447,5 +447,8 @@
             event.target.classList.add('active');
         }
     </script>
+    <div style="text-align: center; margin: 30px 0;">
+        <a href="temp2.html" class="cta-button">More</a>
+    </div>
 </body>
 </html>
