--- a/temp2.html
+++ b/temp2.html
@@ -713,8 +713,8 @@
 </head>
 <body>
     <div class="template-selector">
-        <h2>🚀 Premium Email Template Collection</h2>
-        <p>Professional, conversion-optimized email templates inspired by Zintlr's design excellence</p>
+        <h2>Email Templates</h2>
+        <p>Professional, conversion-optimized email templates</p>
         <div class="template-nav">
             <button class="nav-btn active" onclick="showTemplate(1)">AI Product Launch</button>
             <button class="nav-btn" onclick="showTemplate(2)">Feature Showcase</button>
